Back WorksheetEngine with distributed cache. (#259)